src/index.css
@property --bg-color {
  syntax: "<color>";
  inherits: false;
  initial-value: #FAFFF1;
  ;
}

@property --blue {
  syntax: "<color>";
  inherits: false;
  initial-value: #182230;
}

@property --lime-green {
  syntax: "<color>";
  inherits: false;
  initial-value: #C5F39F;
  ;
}

button{
letter-spacing: 2px;
font-family: "Lato";
}

h1{
  font-family: "NibPro-Regular";
}

p{
  font-family: Lato, "Lato";
}

body{
  border: none;
  background-color: var(--bg-color);
  max-width: 100%;
  box-sizing: border-box;
  overflow-x:hidden;
  margin: 0px;
}

html {
  scroll-behavior: smooth;
  background-color: var(--bg-color);
  margin-top: 0;
  border: 0;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  max-width: 100%;


}

.black{
  border-radius: 12px;
  border-style: none;
  background-color: rgba(0, 0, 0, 20%);
  padding: 10px;
  margin: 10px;
  color: black;
  text-transform: uppercase;
}

.blackoutline{
  border-radius: 12px;
  border: 1.5px solid rgba(0, 0, 0, 50%);
  padding: 8.5px;
  color: black;
  background-color: transparent;

}

.spacer{
  height: 200px;
  background-color: var(--blue);
  width: 120vw;
  transform: translateX(-50vw);

  z-index: 0;
  position: relative;
}

#root {
  text-align: left;
}

.main-div{
}

#footer{
  background-color: var(--blue);
  padding-bottom: 1px;
  padding-right: 5px;
  color: white;
  opacity: 80%;
  text-align: right;
  letter-spacing: 1px;
  font-size: calc(3px + 1.4vh);
  font-family: "Lato-Thin";

}

@font-face {
  font-family: "Raleway-ExtraLight";   /*Can be any text*/
  src: local("Raleway-ExtraLight"),
    url("/src/assets/raleway.extralight.ttf") format("truetype"),

}

@font-face {
  font-family: "Raleway-Thin";   /*Can be any text*/
  src: local("Raleway-Thin"),
    url("/src/assets/raleway.thin.ttf") format("truetype"),

}


@font-face {
  font-family: "raleway";   /*Can be any text*/
  src: local("raleway"),
    url("/src/assets/raleway.ttf") format("truetype"),

}


@font-face {
  font-family: "Raleway-SemiBold";   /*Can be any text*/
  src: local("Raleway-SemiBold"),
    url("/src/assets/Raleway-SemiBold.ttf") format("truetype"),

}

@font-face {
  font-family: "Raleway-Medium";   /*Can be any text*/
  src: local("Raleway-Medium"),
    url("/src/assets/Raleway-Medium.ttf") format("truetype"),

}



@font-face {
  font-family: "NibPro-Light";   /*Can be any text*/
  src: local("NibPro-Light"),
    url("/src/assets/NibPro-Light.ttf") format("truetype"),

}


@font-face {
  font-family: "NibPro-Regular";   /*Can be any text*/
  src: local("NibPro-Regular"),
    url("/src/assets/NibPro-Regular.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-SemiBold";   /*Can be any text*/
  src: local("NibPro-SemiBold"),
    url("/src/assets/NibPro-SemiBold.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-Bold";   /*Can be any text*/
  src: local("NibPro-Bold"),
    url("/src/assets/NibPro-Bold.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-Black";   /*Can be any text*/
  src: local("NibPro-Black"),
    url("/src/assets/NibPro-Black.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-LightItalic";   /*Can be any text*/
  src: local("NibPro-LightItalic"),
    url("/src/assets/NibPro-LightItalic.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-SemiBoldItalic";   /*Can be any text*/
  src: local("NibPro-SemiBoldItalic"),
    url("/src/assets/NibPro-SemiBoldItalic.ttf") format("truetype"),

}

@font-face {
  font-family: "NibPro-BoldItalic";   /*Can be any text*/
  src: local("NibPro-BoldItalic"),
    url("/src/assets/NibPro-BoldItalic.ttf") format("truetype"),

}
@font-face {
  font-family: "Lato-Thin";   /*Can be any text*/
  src: local("Lato-Thin"),
    url("/src/assets/lato.thin.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-Light";   /*Can be any text*/
  src: local("Lato-Light"),
    url("/src/assets/lato.light.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-Medium";   /*Can be any text*/
  src: local("Lato-Medium"),
    url("/src/assets/lato.medium.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato";   /*Can be any text*/
  src: local("Lato"),
    url("/src/assets/lato.regular.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-SemiBold";   /*Can be any text*/
  src: local("Lato-SemiBold"),
    url("/src/assets/lato.semibold.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-LightItalic";   /*Can be any text*/
  src: local("Lato-LightItalic"),
    url("/src/assets/lato.light-italic.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-Italic";   /*Can be any text*/
  src: local("Lato-Italic"),
    url("/src/assets/lato.italic.ttf") format("truetype"),

}


@font-face {
  font-family: "Lato-MediumItalic";   /*Can be any text*/
  src: local("Lato-MediumItalic"),
    url("/src/assets/lato.medium-italic.ttf") format("truetype"),

}

@font-face {
  font-family: "Lato-ThinItalic";   /*Can be any text*/
  src: local("Lato-ThinItalic"),
    url("/src/assets/lato.thin-italic.ttf") format("truetype"),

}


@font-face {
  font-family: "Lato-SemiBoldItalic";   /*Can be any text*/
  src: local("Lato-SemiBoldItalic"),
    url("/src/assets/lato.semibold-italic.ttf") format("truetype"),

}

